# memorizz

./: .env.example  .gitignore  .pre-commit-config.yaml  =0.26.0  INSTALL_ORACLE_CLIENT.md  Makefile  README.md  SETUP.md  deploy.sh  install_oracle.sh  install_oracle_client.sh  mkdocs.yml  pyproject.toml  pytest.ini  setup_dev.sh  start_oracle.sh
.github/workflows/: docs.yml
docs/: index.md
docs/getting-started/: concepts.md  overview.md  python-sdk-quickstart.md
docs/internet-access/: providers.md
docs/memory-providers/: custom.md  filesystem.md  mongodb.md  oracle.md
docs/memory-types/: episodic.md  procedural.md  semantic.md  shared.md  short-term.md
docs/use-cases/: assistant-mode.md  deep-research-mode.md  workflow-mode.md
docs/utilities/: context_window_stats.md
eval/longmemeval/: evaluate_memorizz.py
examples/: setup_oracle_user.py
examples/deep_research/: deep_research_memagent.ipynb
examples/single_agent/: memagent_local_oracle.ipynb  memagent_remote_oracle.ipynb  memagent_single_agent_demo.ipynb
src/memorizz/: MEMORY_ARCHITECTURE.md  __init__.py  cli.py  memagent.py  memagent_original_backup.py  multi_agent_orchestrator.py  task_decomposition.py
src/memorizz/coordination/: __init__.py
src/memorizz/coordination/shared_memory/: __init__.py  messages.py  shared_memory.py
src/memorizz/database/: __init__.py
src/memorizz/database/mongodb/: mongodb_tools.py
src/memorizz/embeddings/: __init__.py
src/memorizz/enums/: __init__.py  application_mode.py  memory_type.py  role.py  semantic_cache_scope.py
src/memorizz/internet_access/: __init__.py  base.py  models.py
src/memorizz/llms/: __init__.py  azure.py  huggingface.py  llm_factory.py  llm_provider.py  openai.py
src/memorizz/long_term_memory/: __init__.py
src/memorizz/memagent/: __init__.py  constants.py  core.py  models.py
src/memorizz/memagent/utils/: __init__.py  (+3 more)
src/memorizz/memory_provider/: __init__.py  base.py
src/memorizz/memory_unit/: __init__.py  conversational_memory_unit.py  memory_unit.py  semantic_cache_entry.py  summary_component.py
src/memorizz/scripts/: install_oracle.sh
src/memorizz/short_term_memory/: semantic_cache.py
src/memorizz/tests/: test_memagent_enhanced_tools.py  test_vegetarian_recipe_agent.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/mocks/: __init__.py  mock_providers.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_backward_compatibility.py  test_core.py  test_entity_memory.py  test_filesystem_provider.py  test_firecrawl_provider.py  test_internet_access.py  test_managers.py  test_memory_types.py  test_multi_agent.py  test_save_load_functionality.py  test_single_agent.py  test_tavily_provider.py
(+62 files in other folders)
