[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorizz"
version = "0.0.35"
description = "A memory management library for Python"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Richmond Alake", email = "richmond.alake@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "numpy",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
mongodb = ["pymongo>=4.0.0"]
oracle = ["oracledb>=2.0.0"]
ollama = ["langchain_ollama", "ollama"]
voyageai = ["voyageai"]
all = [
    "pymongo>=4.0.0",
    "oracledb>=2.0.0",
    "langchain_ollama",
    "ollama",
    "voyageai"
]

[project.scripts]
memorizz = "memorizz.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
exclude = ["temp_unpack*"]
