[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorizz"
version = "0.0.38"
description = "A memory management library for Python"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Richmond Alake", email = "richmond.alake@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "numpy",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.5.0",
    "transformers>=4.36.0",
    "accelerate>=0.26.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
mongodb = ["pymongo>=4.0.0"]
oracle = ["oracledb>=2.0.0"]
filesystem = ["faiss-cpu>=1.7.4"]
ollama = ["langchain_ollama", "ollama"]
voyageai = ["voyageai"]
huggingface = [
    "numpy>=1.21,<2",
    "sentence-transformers>=2.5.0",
    "transformers>=4.36.0",
    "accelerate>=0.26.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "pymdown-extensions>=10.0",
]
all = [
    "pymongo>=4.0.0",
    "oracledb>=2.0.0",
    "langchain_ollama",
    "ollama",
    "voyageai",
    "faiss-cpu>=1.7.4",
    "numpy>=1.21,<2",
    "sentence-transformers>=2.5.0",
    "transformers>=4.36.0",
    "accelerate>=0.26.0",
]

[project.scripts]
memorizz = "memorizz.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
exclude = ["temp_unpack*"]
